Add basic functions

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 
        <div class="screen">
             <div class="history"></div>
-            <div class="input"></div>
+            <div class="output"></div>
        </div> 
 
        <div class="buttons-grid">
-            <button class="btn-clr btn">Clear</button>
-            <button class="btn-del btn material-icons">backspace</button>
-            <button class="btn-div btn">/</button>
-            <button class="btn-num btn">9</button>
-            <button class="btn-num btn">8</button>
-            <button class="btn-num btn">7</button>
-            <button class="btn-mul btn">X</button>
-            <button class="btn-num btn">4</button>
-            <button class="btn-num btn">5</button>
-            <button class="btn-num btn">6</button>
-            <button class="btn-sub btn">-</button>
-            <button class="btn-num btn">1</button>
-            <button class="btn-num btn">2</button>
-            <button class="btn-num btn">3</button>
-            <button class="btn-sum btn">+</button>
-            <button class="btn-num btn">0</button>
-            <button class="btn-dec btn">.</button>
-            <button class="btn-op btn">=</button>
+            <button class="btn-clr btn" id="clr">Clear</button>
+            <button class="btn-del btn material-icons" id="bs">backspace</button>
+            <button class="btn-div btn" id="div">/</button>
+            <button class="btn-num btn" id="a9">9</button>
+            <button class="btn-num btn" id="a8">8</button>
+            <button class="btn-num btn" id="a7">7</button>
+            <button class="btn-mul btn" id="mul">*</button>
+            <button class="btn-num btn" id="a4">4</button>
+            <button class="btn-num btn" id="a5">5</button>
+            <button class="btn-num btn" id="a6">6</button>
+            <button class="btn-sub btn" id="sub">-</button>
+            <button class="btn-num btn" id="a1">1</button>
+            <button class="btn-num btn" id="a2">2</button>
+            <button class="btn-num btn" id="a3">3</button>
+            <button class="btn-sum btn" id="sum">+</button>
+            <button class="btn-num btn" id="a0">0</button>
+            <button class="btn-dec btn" id="dec">.</button>
+            <button class="btn-op btn" id="op">=</button>
 
         </div>
     </div>
